@@ -41,12 +41,10 @@ public class DynamicMultiSelectListService {
     public DynamicMultiSelectList getOrdersAsDynamicMultiSelectList(CaseData caseData) {
 
         List<Element<OrderDetails>> orders = caseData.getOrderCollection();
-        log.info("order collection id's {}", orders.stream().map(a -> a.getId()).collect(Collectors.toList()));
+        log.info("order collection id's {}", orders.stream().map(Element::getId).toList());
         List<DynamicMultiselectListElement> listItems = new ArrayList<>();
-        orders.forEach(order -> {
-            listItems.add(DynamicMultiselectListElement.builder().code(String.valueOf(order.getId()))
-                              .label(order.getValue().getLabelForDynamicList()).build());
-        });
+        orders.forEach(order -> listItems.add(DynamicMultiselectListElement.builder().code(String.valueOf(order.getId()))
+                              .label(order.getValue().getLabelForDynamicList()).build()));
         log.info("*********final list before returning {}", listItems);
         return DynamicMultiSelectList.builder().listItems(listItems).build();
     }
